--- a/index.html
+++ b/index.html
@@ -366,8 +366,25 @@
       }
 
       .publicacoes-item-icon {
-        font-size: 1.25rem;
-        line-height: 1;
+        display: inline-block;
+        width: 1.5rem;
+        height: 1.5rem;
+        flex-shrink: 0;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+      }
+
+      .publicacoes-item-icon--pdf {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23d32f2f' d='M6 2h7l5 5v15a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z'/%3E%3Cpath fill='%23ef5350' d='M13 2v5h5'/%3E%3Ctext x='12' y='17' text-anchor='middle' font-family='Arial, sans-serif' font-size='7' font-weight='700' fill='%23fff'%3EPDF%3C/text%3E%3C/svg%3E");
+      }
+
+      .publicacoes-item-icon--image {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Crect x='3' y='4' width='18' height='16' rx='2' fill='%23215695'/%3E%3Crect x='4.5' y='5.5' width='15' height='13' rx='1.2' fill='%233968c8'/%3E%3Ccircle cx='9' cy='11' r='2.2' fill='%23fff59d'/%3E%3Cpath fill='%23c5cae9' d='M6 18l4.2-4.6 2.7 3.2 2.6-3L18 18z'/%3E%3C/svg%3E");
+      }
+
+      .publicacoes-item-icon--generic {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%233f51b5' d='M7 2h7l5 5v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z'/%3E%3Cpath fill='%235c6bc0' d='M14 2v5h5'/%3E%3Crect x='8.5' y='12' width='7' height='1.5' rx='.75' fill='%23c5cae9'/%3E%3Crect x='8.5' y='15' width='5' height='1.5' rx='.75' fill='%23c5cae9'/%3E%3C/svg%3E");
       }
 
       .publicacoes-item time {
@@ -784,41 +801,28 @@
             normalizedExtension = parts.length > 1 ? parts.pop().toLowerCase() : "";
           }
 
-          var iconMap = {
-            pdf: "📄",
-            doc: "📝",
-            docx: "📝",
-            odt: "📝",
-            xls: "📊",
-            xlsx: "📊",
-            csv: "📊",
-            ods: "📊",
-            ppt: "📑",
-            pptx: "📑",
-            zip: "🗂️",
-            rar: "🗂️",
-            "7z": "🗂️",
-            mp4: "🎬",
-            mov: "🎬",
-            avi: "🎬",
-            mkv: "🎬",
-            webm: "🎬",
-            mp3: "🎧",
-            wav: "🎧",
-            ogg: "🎧",
-            jpg: "🖼️",
-            jpeg: "🖼️",
-            png: "🖼️",
-            gif: "🖼️",
-            bmp: "🖼️",
-            svg: "🖼️",
-            txt: "📜",
-            rtf: "📜",
-            xml: "🧾",
-            json: "🧾",
+          if (normalizedExtension === "pdf") {
+            return "pdf";
+          }
+
+          var imageExtensions = {
+            jpg: true,
+            jpeg: true,
+            png: true,
+            gif: true,
+            bmp: true,
+            svg: true,
+            webp: true,
+            tif: true,
+            tiff: true,
+            heic: true,
           };
 
-          return iconMap[normalizedExtension] || "📎";
+          if (normalizedExtension && imageExtensions[normalizedExtension]) {
+            return "image";
+          }
+
+          return "generic";
         }
 
         function sanitizeDigits(value) {
@@ -2032,8 +2036,9 @@
                 }
 
                 var iconSpan = document.createElement("span");
-                iconSpan.className = "publicacoes-item-icon";
-                iconSpan.textContent = icon;
+                var iconType = icon || "generic";
+                iconSpan.className = "publicacoes-item-icon publicacoes-item-icon--" + iconType;
+                iconSpan.setAttribute("aria-hidden", "true");
 
                 var textSpan = document.createElement("span");
                 textSpan.textContent = entry.description;
